# datafusion-distributed-experiment

./: .gitignore  Cargo.toml  README.md  rust-toolchain.toml
benchmarks/: Cargo.toml  README.md  gen-tpch.sh
benchmarks/src/: lib.rs
benchmarks/src/tpch/: convert.rs  mod.rs  run.rs
benchmarks/src/util/: memory.rs  mod.rs  options.rs  run.rs
src/: channel_manager.rs  composed_extension_codec.rs  context.rs  lib.rs  user_provided_codec.rs
src/errors/: arrow_error.rs  datafusion_error.rs  io_error.rs  mod.rs  objectstore_error.rs  parquet_error.rs  schema_error.rs
src/flight_service/: do_get.rs  mod.rs  service.rs  session_builder.rs  stream_partitioner_registry.rs
src/plan/: arrow_flight_read.rs  arrow_flight_read_proto.rs  assign_stages.rs  mod.rs
src/stage_delegation/: context.rs  delegation.rs  mod.rs
src/test_utils/: insta.rs  localhost.rs  mod.rs  plan.rs
testdata/tpch/parquet/customer/: part-0.parquet
testdata/tpch/parquet/lineitem/: part-0.parquet
testdata/tpch/parquet/nation/: part-0.parquet
testdata/tpch/parquet/orders/: part-0.parquet
testdata/tpch/parquet/part/: part-0.parquet
testdata/tpch/parquet/partsupp/: part-0.parquet
testdata/tpch/parquet/region/: part-0.parquet
testdata/tpch/parquet/supplier/: part-0.parquet
tests/: custom_extension_codec.rs  distributed_aggregation.rs  distributed_repartitions.rs  error_propagation.rs  highly_distributed_query.rs  tpch.rs
tests/common/: insta.rs  localhost.rs  mod.rs  plan.rs
