[workspace]
members = [
    "benchmarks"
]

[workspace.dependencies]
datafusion = { version = "49.0.0" }
datafusion-proto = { version = "49.0.0" }

[package]
name = "datafusion-distributed"
version = "0.1.0"
edition = "2021"

[dependencies]
datafusion = { workspace = true }
datafusion-proto = { workspace = true }
arrow-flight = "55.2.0"
async-trait = "0.1.88"
tokio = { version = "1.46.1", features = ["full"] }
# Fixed to 0.12.3 because of arrow-flight
tonic = { version = "0.12.3", features = ["transport"] }
tower = "0.5.2"
http = "1.3.1"
futures = "0.3.31"
url = "2.5.4"
uuid = "1.17.0"
delegate = "0.13.4"
dashmap = "6.1.0"
prost = "0.13.5"
object_store = "0.12.3"
hyper-util = "0.1.16"
tokio-stream = "0.1.17"

# integration
insta = { version = "1.43.1", features = ["filters"], optional = true }

[features]
integration = [
    "insta",
]

[dev-dependencies]
insta = { version = "1.43.1", features = ["filters"] }
