[package]
name = "datafusion-distributed-benchmarks"
version = "0.1.0"
edition = "2021"
default-run = "dfbench"

[dependencies]
datafusion = { workspace = true }
datafusion-distributed = { path = "..", features = ["integration"] }
tokio = { version = "1.46.1", features = ["full"] }
parquet = { version = "55.2.0" }
structopt = { version = "0.3.26" }
log = "0.4.27"
serde = "1.0.219"
serde_json = "1.0.141"
env_logger = "0.11.8"
async-trait = "0.1.88"
datafusion-proto = { version = "49.0.0", optional = true }

[[bin]]
name = "dfbench"
path = "src/bin/dfbench.rs"

[features]
ci = [
    "datafusion-proto"
]